# EnterpriseSystemsCatalog

./: .replit  README.md  TESTING.md  backend_requirements.txt  db_data.json  pyproject.toml  replit.md  run_dev_server.py  run_fastapi_server.py  run_server.py  start_app.py  start_fastapi.py  start_fastapi_and_frontend.py  start_frontend_only.js  start_server.py  test_api.py
attached_assets/: Enterprise_Systems_Catalog_PRD_1751554824332.md  agent_RAG_1751567909784.py  main (1)_1751555395231.py
client/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx
client/src/components/: ChatPrompt.tsx  Layout.tsx  SystemDetail.tsx  SystemForm.tsx  SystemList.tsx
client/src/lib/: queryClient.ts
client/src/pages/: chat-demo.tsx  dashboard.tsx
server/: index.ts  main.py  routes.ts  simple_server.py  storage.ts
shared/: schema.ts
