[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "faiss-cpu>=1.11.0",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
]
